--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title> Exercício sobre HTML e CSS </title>
+    <link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>
 <h1> Exercício de HTML5 e CSS3</h1>
