adicionei um css

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>
+ <div id="container">
 <h1> Exercício de HTML5 e CSS3</h1>
 <hr>
 <h2> Tecnologias Web </h2>
@@ -40,10 +41,11 @@
 
 <hr>
 <p>Desenvolvido de acordo com os Padrões Web.</p>
+
+</div>
+</body>
 <figure>
     <img src="imagens/logo-w3c.gif" alt="Logo W3C">
     <figcaption>W3C - World Wide Web Consortium</figcaption>
 </figure>
-</body>
-    
 </html>
